modules/02-networkpolicy/allow-from-blue.yaml
# trin 3: kun lab-blue + lab-tools må tale med whoami (ikke lab-red selv!)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: whoami-allow-blue-tools, namespace: lab-red }
spec:
  podSelector: { matchLabels: { app: whoami } }
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - { key: kubernetes.io/metadata.name, operator: In, values: [lab-blue, lab-tools] }
      ports: [{ protocol: TCP, port: 80 }]
